--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,7 +9,7 @@ services:
       environment:
         POSTGRES_PASSWORD: {DB_PASS}          
         POSTGRES_DB: {DB_NAME}
-    container_name: nubedb
+    ##container_name: nubedb
     volumes:
      - ./postgres:/var/lib/postgresql/data
 
@@ -20,7 +20,7 @@ services:
         context: .
         dockerfile: Dockerfile
       image: nube-docker
-      container_name: nubeapp
+      ##container_name: nubeapp
       restart: always # reiniciar el contenedor si se detiene
       ports:
         - "${PORT}:${PORT}"
