--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,35 +5,27 @@ services:
       image: postgres:14.3
       restart: always
       ports:
-       - "${DB_PORT}:${DB_PORT}"
+        - "$${DB_PORT}:$${DB_PORT}"
       environment:
         POSTGRES_PASSWORD: nube          
         POSTGRES_DB: nubedb
-    ##container_name: nubedb
       volumes:
         - ./postgres:/var/lib/postgresql/data
 
     anylistapp:
       depends_on:
-      - db
+        - db
       build: 
         context: .
         dockerfile: Dockerfile
       image: nube-docker
-      ##container_name: nubeapp
-      restart: always # reiniciar el contenedor si se detiene
+      restart: always  # Reiniciar el contenedor si se detiene
       ports:
         - "${PORT}:${PORT}"
-   
-    environment:
-      #DB_PASSWORD: ${DB_PASS}
-      #DB_NAME: ${DB_NAME}
-      #DB_HOSTNAME: ${DB_HOST}
-      #DB_PORT: ${DB_PORT}
-      #DB_USERNAME: ${DB_USERNAME}
-      #PORT: ${PORT}
-
-
-
-   
-   
+      environment:
+        DB_PASSWORD: "${DB_PASS}"
+        DB_NAME: "${DB_NAME}"
+        DB_HOSTNAME: "${DB_HOST}"
+        DB_PORT: "${DB_PORT}"
+        DB_USERNAME: "${DB_USERNAME}"
+        PORT: "${PORT}"
