--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,31 +1,31 @@
 version: '3'
 
 services:
-    db:
-      image: postgres:14.3
-      restart: always
-      ports:
-        - "$${DB_PORT}:$${DB_PORT}"
-      environment:
-        POSTGRES_PASSWORD: nube          
-        POSTGRES_DB: nubedb
-      volumes:
-        - ./postgres:/var/lib/postgresql/data
+  db:
+    image: postgres:14.3
+    restart: always
+    ports:
+      - "5432:${DB_PORT}"
+    environment:
+      POSTGRES_PASSWORD: nube
+      POSTGRES_DB: nubedb
+    volumes:
+      - ./postgres:/var/lib/postgresql/data
 
-    anylistapp:
-      depends_on:
-        - db
-      build: 
-        context: .
-        dockerfile: Dockerfile
-      image: nube-docker
-      restart: always  # Reiniciar el contenedor si se detiene
-      ports:
-        - "${PORT}:${PORT}"
-      environment:
-        DB_PASSWORD: "${DB_PASS}"
-        DB_NAME: "${DB_NAME}"
-        DB_HOSTNAME: "${DB_HOST}"
-        DB_PORT: "${DB_PORT}"
-        DB_USERNAME: "${DB_USERNAME}"
-        PORT: "${PORT}"
+  anylistapp:
+    depends_on:
+      - db
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: nube-docker
+    restart: always
+    ports:
+      - "3000:${PORT}"
+    environment:
+      DB_PASSWORD: "${DB_PASS}"
+      DB_NAME: "${DB_NAME}"
+      DB_HOSTNAME: "${DB_HOST}"
+      DB_PORT: "${DB_PORT}"
+      DB_USERNAME: "${DB_USERNAME}"
+      PORT: "${PORT}"
