--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,29 +1,22 @@
-version: '3'
+version: "3.9"
 
 services:
-  db:
-    image: postgres:14.3
-    restart: always
-    environment:
-      POSTGRES_PASSWORD: nube
-      POSTGRES_DB: nubedb
-    volumes:
-      - ./postgres:/var/lib/postgresql/data
-
-  anylistapp:
-    depends_on:
-      - db
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: nube-docker
-    restart: always
+  nest:
+    build: .
     ports:
-      - "3000:${PORT}"
+      - "${PORT}:${PORT}"
+    depends_on:
+      - postgres
+
+  postgres:
+    image: postgres:16
+    restart: always
     environment:
-      DB_PASS: "${DB_PASS}"
-      DB_NAME: "${DB_NAME}"
-      DB_HOST: db
-      DB_PORT: "5432"
-      DB_USERNAME: "${DB_USERNAME}"
-      PORT: "${PORT}"
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_DB: nube
+    container_name: nubedb
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres-data: /var/lib/postgresql/data
