--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,6 +3,12 @@ version: "3.9"
 services:
   nest:
     build: .
+    environment:
+      DB_HOST: "${DB_HOST}"
+      PORT: "${PORT}"
+      DB_NAME: "${DB_NAME}"
+      DB_USERNAME: "${DB_USERNAME}"
+      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
     ports:
       - "${PORT}:${PORT}"
     depends_on:
