--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,30 +1,76 @@
-version: "3.9"
+version: '3.9'
 
 services:
-  nest:
-    build: .
-    environment:
-      DB_HOST: "${DB_HOST}"
-      PORT: "${PORT}"
-      DB_NAME: "${DB_NAME}"
-      DB_USERNAME: "${DB_USERNAME}"
-      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
-    ports:
-      - "${PORT}:${PORT}"
-    depends_on:
-      - postgres
-
-  postgres:
-    image: postgres:16
+  webserver:
+    image: practica-compnube:nginx-1.25.5-alpine
     restart: always
-    environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_USER: ${DB_USERNAME}
-      POSTGRES_DB: nube
-    container_name: nubedb
+    deploy:
+      replicas: 1
+    networks:
+      - wpnet
     ports:
-      - "5432:5432"
+      - 8080:8080
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - wordpress:/var/www/html
+    configs:
+      - source: nginx_default_conf
+        target: /etc/nginx/conf.d/default.conf
+
+  appserver:
+    image: practica-compnube:wordpress-6.5.2-php8.1-fpm-alpine
+    restart: always
+    deploy:
+      replicas: 1
+    networks:
+      - wpnet
+    environment:
+      WORDPRESS_DB_HOST: db
+      WORDPRESS_DB_USER: nube
+      WORDPRESS_DB_PASSWORD_FILE: "/run/secrets/db_user_passwd"
+      WORDPRESS_DB_NAME: nube
+    volumes:
+      - wordpress:/var/www/html
+    secrets:
+      - db_user_passwd
+
+  db:
+    image: practica-compnube:postgres-latest
+    restart: always
+    networks:
+      - wpnet
+    environment:
+      POSTGRES_DB: nube
+      POSTGRES_USER: nube
+      POSTGRES_PASSWORD: nube
+    secrets:
+      - db_user_passwd
+    volumes:
+      - db:/var/lib/postgresql/data
+    ports:
+      - "5431:5432"
+
 volumes:
-  postgres-data:
+  wordpress:
+    driver: local
+    driver_opts:
+      type: "nfs"
+      o: "addr=nfssrv01,rw"
+      device: ":/home/docker-vols/wordpress-data"
+  db:
+    driver: local
+    driver_opts:
+      type: "nfs"
+      o: "addr=nfssrv01,rw"
+      device: ":/home/docker-vols/wordpress-db"
+
+networks:
+  wpnet:
+    driver: overlay
+
+secrets:
+  db_user_passwd:
+    file: ./db_user_passwd
+
+configs:
+  nginx_default_conf:
+    file: ./default.conf
